--- a/src/main/resources/static/report/purchase-order.jrxml
+++ b/src/main/resources/static/report/purchase-order.jrxml
@@ -47,7 +47,7 @@
 				<reportElement mode="Opaque" x="40" y="90" width="75" height="16" forecolor="#FFFFFF" backcolor="#65161D" uuid="6673ea69-787d-46fb-982f-3915f5f80268"/>
 				<box leftPadding="2"/>
 				<textElement verticalAlignment="Middle">
-					<font fontName="Arial" size="10"/>
+					<font fontName="DejaVu Sans" size="10"/>
 				</textElement>
 				<text><![CDATA[Kepada Yth.]]></text>
 			</staticText>
@@ -55,7 +55,7 @@
 				<reportElement x="40" y="106" width="200" height="16" uuid="27f13102-f6ee-4146-a3c9-a62fb3148cdb"/>
 				<box leftPadding="2"/>
 				<textElement verticalAlignment="Middle">
-					<font fontName="Arial" size="12" isBold="true"/>
+					<font fontName="DejaVu Sans" size="12" isBold="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{perusahaan}]]></textFieldExpression>
 			</textField>
@@ -63,7 +63,7 @@
 				<reportElement x="40" y="122" width="200" height="16" uuid="bc98ee1c-6b87-4556-a563-e9105f405415"/>
 				<box leftPadding="2"/>
 				<textElement verticalAlignment="Middle">
-					<font fontName="Arial" size="12" isBold="false"/>
+					<font fontName="DejaVu Sans" size="12" isBold="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{alamatPerusahaan}]]></textFieldExpression>
 			</textField>
@@ -71,7 +71,7 @@
 				<reportElement mode="Transparent" x="254" y="106" width="55" height="16" forecolor="#030000" backcolor="#65161D" uuid="5033c7a2-aa5e-4894-acc3-d5db2a94c21d"/>
 				<box leftPadding="2"/>
 				<textElement verticalAlignment="Middle">
-					<font fontName="Arial" size="10"/>
+					<font fontName="DejaVu Sans" size="10"/>
 				</textElement>
 				<text><![CDATA[No. PO]]></text>
 			</staticText>
@@ -81,7 +81,7 @@
 					<pen lineWidth="0.5"/>
 				</box>
 				<textElement textAlignment="Left" verticalAlignment="Middle">
-					<font fontName="Arial" size="10" isBold="false"/>
+					<font fontName="DejaVu Sans" size="10" isBold="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{tanggalDibuat}]]></textFieldExpression>
 			</textField>
@@ -91,7 +91,7 @@
 					<pen lineWidth="0.5"/>
 				</box>
 				<textElement verticalAlignment="Middle">
-					<font fontName="Arial" size="10" isBold="false"/>
+					<font fontName="DejaVu Sans" size="10" isBold="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{noPo}]]></textFieldExpression>
 			</textField>
@@ -99,7 +99,7 @@
 				<reportElement x="40" y="170" width="200" height="16" uuid="24b00844-9baf-462e-9e87-08367c71ffec"/>
 				<box leftPadding="2"/>
 				<textElement verticalAlignment="Middle">
-					<font fontName="Arial" size="12" isBold="true" isItalic="true" isUnderline="true"/>
+					<font fontName="DejaVu Sans" size="12" isBold="true" isItalic="true" isUnderline="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Up. " +  $P{penerima}]]></textFieldExpression>
 			</textField>
@@ -107,21 +107,21 @@
 				<reportElement mode="Transparent" x="254" y="90" width="54" height="16" forecolor="#030000" backcolor="#65161D" uuid="4be8f942-efd1-411c-af30-fc89cabc5e33"/>
 				<box leftPadding="2"/>
 				<textElement verticalAlignment="Middle">
-					<font fontName="Arial" size="10"/>
+					<font fontName="DejaVu Sans" size="10"/>
 				</textElement>
 				<text><![CDATA[Tanggal]]></text>
 			</staticText>
 			<staticText>
 				<reportElement mode="Transparent" x="309" y="106" width="15" height="16" forecolor="#030000" backcolor="#65161D" uuid="aacde5cf-7f50-42b1-b7d1-c7453a27019d"/>
 				<textElement verticalAlignment="Middle">
-					<font fontName="Arial" size="11"/>
+					<font fontName="DejaVu Sans" size="11"/>
 				</textElement>
 				<text><![CDATA[:]]></text>
 			</staticText>
 			<staticText>
 				<reportElement mode="Transparent" x="309" y="90" width="15" height="16" forecolor="#030000" backcolor="#65161D" uuid="85741f8c-376c-46bd-9a5f-efaa3445552f"/>
 				<textElement verticalAlignment="Middle">
-					<font fontName="Arial" size="11"/>
+					<font fontName="DejaVu Sans" size="11"/>
 				</textElement>
 				<text><![CDATA[:]]></text>
 			</staticText>
@@ -143,7 +143,7 @@
 					<rightPen lineWidth="0.75" lineStyle="Solid" lineColor="#030000"/>
 				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="Arial" size="11" isBold="true"/>
+					<font fontName="DejaVu Sans" size="11" isBold="true"/>
 				</textElement>
 				<text><![CDATA[No.]]></text>
 			</staticText>
@@ -157,7 +157,7 @@
 					<rightPen lineWidth="0.75" lineStyle="Solid" lineColor="#030000"/>
 				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="Arial" size="11" isBold="true"/>
+					<font fontName="DejaVu Sans" size="11" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Uraian]]></text>
 			</staticText>
@@ -171,7 +171,7 @@
 					<rightPen lineWidth="0.75" lineStyle="Solid" lineColor="#030000"/>
 				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="Arial" size="11" isBold="true"/>
+					<font fontName="DejaVu Sans" size="11" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Sat.]]></text>
 			</staticText>
@@ -185,7 +185,7 @@
 					<rightPen lineWidth="0.75" lineStyle="Solid" lineColor="#030000"/>
 				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="Arial" size="11" isBold="true"/>
+					<font fontName="DejaVu Sans" size="11" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Vol.]]></text>
 			</staticText>
@@ -199,7 +199,7 @@
 					<rightPen lineWidth="0.75" lineStyle="Solid" lineColor="#030000"/>
 				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="Arial" size="11" isBold="true"/>
+					<font fontName="DejaVu Sans" size="11" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Hrg.Sat.(Rp.)]]></text>
 			</staticText>
@@ -215,7 +215,7 @@
 					<rightPen lineWidth="2.0" lineStyle="Solid" lineColor="#030000"/>
 				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="Arial" size="11" isBold="true"/>
+					<font fontName="DejaVu Sans" size="11" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Jumlah (Rp.)]]></text>
 			</staticText>
@@ -238,7 +238,7 @@
 						<rightPen lineWidth="0.75" lineStyle="Solid" lineColor="#030000"/>
 					</box>
 					<textElement textAlignment="Center" verticalAlignment="Middle">
-						<font fontName="Arial" isBold="true"/>
+						<font fontName="DejaVu Sans" isBold="true"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{uraianJudul}]]></textFieldExpression>
 				</textField>
@@ -252,7 +252,7 @@
 						<rightPen lineWidth="0.75" lineStyle="Solid" lineColor="#030000"/>
 					</box>
 					<textElement textAlignment="Center" verticalAlignment="Middle">
-						<font fontName="Arial" isBold="true"/>
+						<font fontName="DejaVu Sans" isBold="true"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{no}]]></textFieldExpression>
 				</textField>
@@ -266,7 +266,7 @@
 						<rightPen lineWidth="0.75" lineStyle="Solid" lineColor="#030000"/>
 					</box>
 					<textElement textAlignment="Center" verticalAlignment="Middle">
-						<font fontName="Arial" isBold="false"/>
+						<font fontName="DejaVu Sans" isBold="false"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{volume}]]></textFieldExpression>
 				</textField>
@@ -280,7 +280,7 @@
 						<rightPen lineWidth="0.75" lineStyle="Solid" lineColor="#030000"/>
 					</box>
 					<textElement textAlignment="Center" verticalAlignment="Middle">
-						<font fontName="Arial" isBold="false"/>
+						<font fontName="DejaVu Sans" isBold="false"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{satuan}]]></textFieldExpression>
 				</textField>
@@ -294,7 +294,7 @@
 						<rightPen lineWidth="0.75" lineStyle="Solid" lineColor="#030000"/>
 					</box>
 					<textElement textAlignment="Right" verticalAlignment="Middle">
-						<font fontName="Arial" isBold="false"/>
+						<font fontName="DejaVu Sans" isBold="false"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{hargaSatuan}]]></textFieldExpression>
 				</textField>
@@ -308,7 +308,7 @@
 						<rightPen lineWidth="2.0" lineStyle="Solid" lineColor="#030000"/>
 					</box>
 					<textElement textAlignment="Right" verticalAlignment="Middle">
-						<font fontName="Arial" isBold="false"/>
+						<font fontName="DejaVu Sans" isBold="false"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{jumlah}]]></textFieldExpression>
 				</textField>
@@ -325,7 +325,7 @@
 						<rightPen lineWidth="0.75" lineStyle="Solid" lineColor="#030000"/>
 					</box>
 					<textElement textAlignment="Center" verticalAlignment="Middle">
-						<font fontName="Arial" isBold="false"/>
+						<font fontName="DejaVu Sans" isBold="false"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{blank}]]></textFieldExpression>
 					<patternExpression><![CDATA[$F{uraianJudul}]]></patternExpression>
@@ -340,7 +340,7 @@
 						<rightPen lineWidth="0.75" lineStyle="Solid" lineColor="#030000"/>
 					</box>
 					<textElement textAlignment="Left" verticalAlignment="Middle">
-						<font fontName="Arial" isBold="false"/>
+						<font fontName="DejaVu Sans" isBold="false"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{uraianDeskripsi}]]></textFieldExpression>
 				</textField>
@@ -354,7 +354,7 @@
 						<rightPen lineWidth="0.75" lineStyle="Solid" lineColor="#030000"/>
 					</box>
 					<textElement textAlignment="Center" verticalAlignment="Middle">
-						<font fontName="Arial" isBold="false"/>
+						<font fontName="DejaVu Sans" isBold="false"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{blank}]]></textFieldExpression>
 					<patternExpression><![CDATA[$F{uraianJudul}]]></patternExpression>
@@ -369,7 +369,7 @@
 						<rightPen lineWidth="0.75" lineStyle="Solid" lineColor="#030000"/>
 					</box>
 					<textElement textAlignment="Center" verticalAlignment="Middle">
-						<font fontName="Arial" isBold="false"/>
+						<font fontName="DejaVu Sans" isBold="false"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{blank}]]></textFieldExpression>
 					<patternExpression><![CDATA[$F{uraianJudul}]]></patternExpression>
@@ -384,7 +384,7 @@
 						<rightPen lineWidth="0.75" lineStyle="Solid" lineColor="#030000"/>
 					</box>
 					<textElement textAlignment="Center" verticalAlignment="Middle">
-						<font fontName="Arial" isBold="false"/>
+						<font fontName="DejaVu Sans" isBold="false"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{blank}]]></textFieldExpression>
 					<patternExpression><![CDATA[$F{uraianJudul}]]></patternExpression>
@@ -399,7 +399,7 @@
 						<rightPen lineWidth="2.0" lineStyle="Solid" lineColor="#030000"/>
 					</box>
 					<textElement textAlignment="Center" verticalAlignment="Middle">
-						<font fontName="Arial" isBold="false"/>
+						<font fontName="DejaVu Sans" isBold="false"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{blank}]]></textFieldExpression>
 					<patternExpression><![CDATA[$F{uraianJudul}]]></patternExpression>
@@ -421,7 +421,7 @@
 						<rightPen lineWidth="0.75" lineStyle="Solid" lineColor="#030000"/>
 					</box>
 					<textElement textAlignment="Center" verticalAlignment="Middle">
-						<font fontName="Arial" size="11" isBold="false"/>
+						<font fontName="DejaVu Sans" size="11" isBold="false"/>
 					</textElement>
 					<text><![CDATA[]]></text>
 				</staticText>
@@ -435,7 +435,7 @@
 						<rightPen lineWidth="0.75" lineStyle="Solid" lineColor="#030000"/>
 					</box>
 					<textElement textAlignment="Center" verticalAlignment="Middle">
-						<font fontName="Arial" size="11" isBold="false"/>
+						<font fontName="DejaVu Sans" size="11" isBold="false"/>
 					</textElement>
 					<text><![CDATA[]]></text>
 				</staticText>
@@ -449,7 +449,7 @@
 						<rightPen lineWidth="0.75" lineStyle="Solid" lineColor="#030000"/>
 					</box>
 					<textElement textAlignment="Center" verticalAlignment="Middle">
-						<font fontName="Arial" size="11" isBold="false"/>
+						<font fontName="DejaVu Sans" size="11" isBold="false"/>
 					</textElement>
 					<text><![CDATA[]]></text>
 				</staticText>
@@ -465,7 +465,7 @@
 						<rightPen lineWidth="2.0" lineStyle="Solid" lineColor="#030000"/>
 					</box>
 					<textElement textAlignment="Right" verticalAlignment="Middle">
-						<font fontName="Arial" isBold="true" isItalic="true"/>
+						<font fontName="DejaVu Sans" isBold="true" isItalic="true"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$P{total}]]></textFieldExpression>
 				</textField>
@@ -479,7 +479,7 @@
 						<rightPen lineWidth="2.0" lineStyle="Solid" lineColor="#030000"/>
 					</box>
 					<textElement textAlignment="Left" verticalAlignment="Middle">
-						<font fontName="Arial" size="11" isBold="false"/>
+						<font fontName="DejaVu Sans" size="11" isBold="false"/>
 					</textElement>
 					<text><![CDATA[Total]]></text>
 				</staticText>
@@ -493,7 +493,7 @@
 						<rightPen lineWidth="0.75" lineStyle="Solid" lineColor="#030000"/>
 					</box>
 					<textElement textAlignment="Center" verticalAlignment="Middle">
-						<font fontName="Arial" size="11" isBold="true"/>
+						<font fontName="DejaVu Sans" size="11" isBold="true"/>
 					</textElement>
 					<text><![CDATA[]]></text>
 				</staticText>
@@ -502,7 +502,7 @@
 				<reportElement mode="Opaque" x="40" y="30" width="135" height="16" forecolor="#FFFFFF" backcolor="#65161D" uuid="5013a379-7ffc-4fb9-ae77-6b3b3e56f8a2"/>
 				<box leftPadding="2"/>
 				<textElement verticalAlignment="Middle">
-					<font fontName="Arial" size="10"/>
+					<font fontName="DejaVu Sans" size="10"/>
 				</textElement>
 				<text><![CDATA[Terbilang:]]></text>
 			</staticText>
@@ -512,7 +512,7 @@
 					<pen lineWidth="0.5"/>
 				</box>
 				<textElement verticalAlignment="Middle">
-					<font fontName="Arial" size="10" isBold="false"/>
+					<font fontName="DejaVu Sans" size="10" isBold="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{terbilang}]]></textFieldExpression>
 			</textField>
@@ -520,7 +520,7 @@
 				<reportElement positionType="Float" mode="Opaque" x="40" y="100" width="75" height="16" forecolor="#FFFFFF" backcolor="#65161D" uuid="a600eafb-ed62-440a-b216-782835c446ac"/>
 				<box leftPadding="2"/>
 				<textElement verticalAlignment="Middle">
-					<font fontName="Arial" size="10"/>
+					<font fontName="DejaVu Sans" size="10"/>
 				</textElement>
 				<text><![CDATA[Ketentuan:]]></text>
 			</staticText>
@@ -530,7 +530,7 @@
 					<pen lineWidth="0.5"/>
 				</box>
 				<textElement verticalAlignment="Middle">
-					<font fontName="Arial" size="10" isBold="false"/>
+					<font fontName="DejaVu Sans" size="10" isBold="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{ketentuan}]]></textFieldExpression>
 			</textField>
@@ -540,7 +540,7 @@
 					<pen lineWidth="0.0"/>
 				</box>
 				<textElement verticalAlignment="Middle">
-					<font fontName="Arial" size="10" isBold="false"/>
+					<font fontName="DejaVu Sans" size="10" isBold="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{tempat} + ", " + $P{tanggalDitandatangani}]]></textFieldExpression>
 			</textField>
@@ -550,7 +550,7 @@
 					<pen lineWidth="0.0"/>
 				</box>
 				<textElement verticalAlignment="Middle">
-					<font fontName="Arial" size="10" isBold="false"/>
+					<font fontName="DejaVu Sans" size="10" isBold="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{yangMenandatangani}]]></textFieldExpression>
 			</textField>
