--- a/src/main/resources/static/report/invoice.jrxml
+++ b/src/main/resources/static/report/invoice.jrxml
@@ -58,7 +58,7 @@
 				<text><![CDATA[Kepada Yth.]]></text>
 			</staticText>
 			<textField textAdjust="StretchHeight">
-				<reportElement x="30" y="106" width="145" height="16" uuid="27f13102-f6ee-4146-a3c9-a62fb3148cdb"/>
+				<reportElement positionType="Float" x="30" y="106" width="145" height="16" uuid="27f13102-f6ee-4146-a3c9-a62fb3148cdb"/>
 				<box leftPadding="2"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="DejaVu Sans" size="12" isBold="true"/>
@@ -66,7 +66,7 @@
 				<textFieldExpression><![CDATA[$P{perusahaan}]]></textFieldExpression>
 			</textField>
 			<textField textAdjust="StretchHeight">
-				<reportElement x="30" y="122" width="145" height="16" uuid="bc98ee1c-6b87-4556-a563-e9105f405415"/>
+				<reportElement positionType="Float" x="30" y="122" width="145" height="16" uuid="bc98ee1c-6b87-4556-a563-e9105f405415"/>
 				<box leftPadding="2"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="DejaVu Sans" size="12" isBold="false"/>
@@ -84,7 +84,7 @@
 				<textFieldExpression><![CDATA[$P{tanggalDibuat}]]></textFieldExpression>
 			</textField>
 			<textField textAdjust="StretchHeight">
-				<reportElement x="30" y="170" width="145" height="16" uuid="24b00844-9baf-462e-9e87-08367c71ffec"/>
+				<reportElement positionType="Float" x="30" y="170" width="145" height="16" uuid="24b00844-9baf-462e-9e87-08367c71ffec"/>
 				<box leftPadding="2"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="DejaVu Sans" size="12" isBold="true" isItalic="true" isUnderline="true"/>
